CSS/styles.scss
a {
  text-decoration: none;
}

$grid-breakpoints: (lg: 1024px);

body {
  padding-top: 115px;
  overflow-x: hidden;
}

header {
  overflow: hidden;
  box-shadow: 0 0 10px black;
  background-color: #2a1530;
}

.normaltextsize {
  font-size: 11px;
}

#mainpageicon {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  border: 1px solid white;
  padding: 5px;
}

.carousel-inner {
  height: 700px;
}

.searchpicture1 {
  background: url('/Resources/food.jpg');
  background-size: cover;
  background-position: center;
}

.searchpicture2 {
  background-image: url('/Resources/food2.jpg');
  background-size: cover;
  background-position: center;
}

.searchpicture3 {
  background-image: url('/Resources/food3.jpg');
  background-size: cover;
  background-position: center;
}

.infobanner {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 4fr 1fr 1fr 1fr;
  padding: 30px;
  justify-content: center;

  button {
    width: 250px;
    height: 50px;
    border: 0;
    border-radius: 5px;
    background-color: aliceblue;
  }

  img {
    border-radius: 50%;
    grid-row-start: 1;
    width: 250px;
    height: 250px;
    justify-self: center;
    margin: 10px;
  }
}

.infobanner2 {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 4fr 1fr 1fr 1fr;
  padding: 30px;
  justify-content: center;
  max-height: 550px;

  button {
    width: 250px;
    height: 50px;
    border: 0;
    border-radius: 5px;
    background-color: aliceblue;
  }

  img {
    border-top-right-radius: 30px;
    border-top-left-radius: 30px;
    grid-row-start: 1;
    width: 250px;
    height: 250px;
    justify-self: center;
    margin: 10px;
  }
}

.banner1 {
  background-color: rgb(80, 149, 170);

  button {
    color: rgb(80, 149, 170);
  }
}

.banner2 {
  background-color: rgb(173, 130, 74);

  button {
    color: rgb(173, 130, 74);
  }
}

.banner3 {
  background-color: rgb(119, 65, 98);

  button {
    color: rgb(119, 65, 98);
  }
}

.menuimg {
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: center;

  img {
    width: 45px;
    height: 45px;
    border-radius: 50%;
    border: 1px solid silver;
    padding: 6px;
  }
}

.navmenu {
  border-bottom: 1px solid silver;
  padding: 5px 0 5px 0;
  margin: 0;
  width: 100%;
}

.mainfooter {
  background-color: #2a1530;
}

.solcialicons {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;

  img {
    margin: 0 5px 0 5px;
    width: 16px;
    height: 16px;
  }
}

.rights {
  color: white;
  text-align: right;
}

#no {
  width: 20px;
}

#yes {
  width: 20px;
}

.filtercontainer {
  background-image: url('/Resources/searchbanner.jpg');
  background-position: center;
  background-size: cover;
  box-shadow: inset 0 0 150px 150px rgba(0, 51, 59, 0.678);
  color: white;
  border-radius: 10px;
}

.filtermain {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
}

.filterchild {
  margin: 0 10px 0 10px;
  max-height: 100px;

  p {
    margin: 0;
  }

  input {
    height: 20px;
    width: 100%;
  }
}

.filterbuttons {
  button {
    border: 0;
    border-radius: 5px;
    font-size: 14px;
  }
}

.searchbox {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  background-color: rgba(29, 29, 29, 0.6);
  border-radius: 12px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  p {
    font-weight: bold;
    margin: 10px;
    font-size: 15px;
  }

  button {
    width: 150px;
    border: 0;
    background-color: rgb(245, 226, 197);
    border-radius: 2px;
    align-self: center;
    margin-bottom: 14px;
    font-size: 14px;
  }

  form {
    border-radius: 10px;
    background-color: rgba(73, 44, 73, 0.6);
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;

    label {
      padding: 0;
      font-size: 15px;
      margin-bottom: 10px;
    }

    input {
      margin: 0 20px 20px;
      width: 90%;
      border-radius: 3px;
      border: 0;
      font-size: 18px;
    }

    button {
      margin: 0 20px 0 20px;
      color: white;
      background-color: rgb(69, 170, 228);
      font-weight: bold;
      border: 0;
      border-radius: 5px;
      width: 250px;
      font-size: 15px;
      padding: 4px;
    }
  }
}

.linkschild {
  border-bottom: 1px solid silver;

  h3 {
    color: white;
    font-size: 13px;
    margin: 0;
  }

  p {
    color: white;
  }

  form {
    input {
      font-size: 12px;
      border: 0;
      border-radius: 2px;
      color: #2a1530;
    }

    button {
      font-size: 12px;
      border: 0;
      border-radius: 2px;
      background-color: rgba(127, 255, 212, 0.562);
      color: #2a1530;
    }
  }
}

.searchpagebutton {
  background-color: rgb(65, 126, 177);
  color: white;
}

.searchpageclear {
  background-color: burlywood;
  color: white;
}

.resultboxchild {
  display: flex;

  a {
    display: flex;
    flex-direction: column;
    color: white;
    background-image: url('/Resources/noimageprofile.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    box-shadow: inset 0 0 150px 150px rgba(29, 0, 32, 0.938), 0 0 10px black;
  }
}

.bottombar {
  list-style: none;
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 0;
  margin: 0;

  li {
    a {
      color: white;
    }
  }
}

.Steps {
  padding: 30px;
  display: flex;
  flex-direction: column;
  align-items: center;

  h2 {
    font-size: 20px;
  }

  ul {
    list-style: none;

    li {
      padding: 30px;
      text-align: center;

      img {
        width: 200px;
      }

      h3 {
        font-size: 17px;
      }

      p {
        font-size: 15px;
      }
    }
  }
}

.profileicon {
  width: 30px;
  height: 30px;
}

.profileface {
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.568);
  border-radius: 5px;

  ul {
    list-style-type: none;

    li {
      text-align: center;
      margin: 5px;

      p {
        margin: 0;
      }
    }
  }
}

#reviewstars {
  img {
    width: 20px;
    height: 20px;
  }
}

@media only screen and (min-width: 768px) {
  body {
    padding-top: 75px;
  }

  .infobanner {
    display: grid;
    grid-template-columns: 70% 30%;
    grid-template-rows: 1fr 1fr 1fr;

    h3 {
      grid-column: 1;
      margin-top: 50px;
    }

    p {
      grid-column: 1;
    }

    button {
      grid-column: 1;
      width: 250px;
      height: 50px;
      border: 0;
      border-radius: 5px;
      background-color: aliceblue;
    }

    img {
      border-radius: 50%;
      grid-column: 2;
      grid-row-start: 1;
      grid-row-end: 4;
      width: 250px;
      height: 250px;
    }
  }

  .infobanner2 {
    display: grid;
    grid-template-columns: 70% 30%;
    grid-template-rows: 1fr 1fr 1fr;
    max-height: 310px;

    h3 {
      grid-column: 1;
      margin-top: 50px;
    }

    p {
      grid-column: 1;
    }

    button {
      grid-column: 1;
      width: 250px;
      height: 50px;
      border: 0;
      border-radius: 5px;
      background-color: aliceblue;
    }

    img {
      border-top-left-radius: 30px;
      border-top-right-radius: 30px;
      grid-column: 2;
      grid-row-start: 1;
      grid-row-end: 4;
      width: 250px;
      height: 250px;
    }
  }

  .searchbox {
    form {
      display: grid;
      grid-template-columns: 70% 30%;
      grid-template-rows: 1fr 1fr;

      label {
        grid-column: span 2;
      }

      input {
        margin: 0;
        width: 100%;
      }

      button {
        width: 100%;
        margin: 0;
      }
    }
  }

  .bottombar {
    flex-direction: row;
    justify-content: space-around;
    align-content: center;

    li {
      align-self: center;
    }
  }

  .navmenu {
    align-content: center;
  }

  .filtermain {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
  }
}

